<resources>
    <string name="app_name">CobaCoba</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="tData">Data Anda</string>
    <string name="bsignin">Sign-In</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil Password</string>
    <string name="label2">Login berhasil</string>
    <string name="var1">ini pesan</string>
    <string name="tLogin">Login</string>


    <string name="judul">CobaCobaHalaman dua</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>


</resources>