<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="66dp"
        android:layout_height="37dp"
        android:layout_marginStart="183dp"
        android:layout_marginLeft="183dp"
        android:layout_marginBottom="31dp"
        android:text="@string/Idaftar"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edNama"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:filterTouchesWhenObscured="false"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:text="@string/enama"
        app:layout_constraintBottom_toTopOf="@+id/edAlamat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine|text"
        android:text="@string/ealamat"
        app:layout_constraintBottom_toTopOf="@+id/EdEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EdEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"
        android:text="@string/eemail"
        app:layout_constraintBottom_toTopOf="@+id/edPass"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        android:text="@string/epass"
        app:layout_constraintBottom_toTopOf="@+id/edrepas"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edrepas"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        android:text="@string/erepass"
        app:layout_constraintBottom_toTopOf="@+id/fabSimpan"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:layout_marginBottom="47dp"
        android:clickable="true"
        android:contentDescription="@string/Idaftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>